# MapPrototype

./: .gitignore  CMakeLists.txt  README.md  TEMPLE1.osm  dijkstra.cpp  dijkstra.h  graph.cpp  graph.h  main.cpp  mainwindow.cpp  mainwindow.h  mapwidget.cpp  mapwidget.h  osmparser.cpp  osmparser.h  resources.qrc  temple.osm
include/: AStar.h  AlgorithmBase.h  BFS.h  Dijkstra.h  Graph.h  Node.h  PathFinder.h  UIInterface.h
root/: map.osm
